<resources>
    <string name="app_name">PerforatorMobile</string>
    <string name="self_review">Self Review</string>
    <string name="self_review_question_input_text">Напишите ответ...</string>
    <string name="self_review_question_title">Это вопрос</string>
    <string name="required_input_text">Незаполненное поле ввода</string>
    <string name="input_must_be_filled_text">"Поле необходимо заполнить"</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="login_not_registered_button_text">Не зарегистрированы?</string>
    <string name="phone_hint">Телефон</string>
    <string name="sbis_hint">СБИС</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="already_registered_button_text">Уже зарегистрированы?</string>
    <string name="password_invalid_length">Пароль должен быть не короче 8 символов</string>
    <string name="password_must_contain_uppercase_letters">Пароль должен содержать хотя бы 1 заглавную букву</string>
    <string name="password_must_contain_lowercase_letters">Пароль должен содержать хотя бы 1 строчную букву</string>
    <string name="password_must_contain_numbers">Пароль должен содержать хотя бы 1 цифру</string>
    <string name="incorrect_phone_format">Неверный формат телефона</string>
    <string name="send_self_review_form_button_text">Отправить форму</string>
    <string name="send_self_review_form_as_draft_button_text">Сохранить как черновик</string>
    <string name="self_review_peers_title">Оценивающие (пиры)</string>
    <string name="self_review_peers_block_description">Люди, с которыми вы взаимодействуете по рабочим вопросам. Рекомендуем выбрать до 5–7 человек.</string>
    <string name="add_peers_button">Добавить пиров</string>
    <string name="search_peers">Поиск пиров</string>
    <string name="peers_search_edit_text_hint">Введите имя пира…</string>
    <string name="save_chosen_peers_button_text">Сохранить выбор</string>
    <string name="verify_peers_title">Подтверждение пиров</string>
    <string name="users_not_sent_self_review_text">Не отправившие селф-ревью</string>
    <string name="not_verified_users_title">Неподтверждённые пользователи</string>
    <string name="verified_users_title">Подтверждённые пользователи</string>
    <string name="chosen_peers_fragment_title">Выбор пиров</string>
    <string name="verify_peers_button">Подтвердить набор пиров</string>
    <string name="peers_review_menu_item_title">Ревью сотрудников</string>
    <string name="subordinates_menu_item_title">Подчинённые</string>
    <string name="results_menu_item_title">Итоги</string>
    <string name="review_peers_fragment_title">Пиры, которых нужно оценить</string>
    <string name="review_manager_title">Менеджер, которого нужно оценить</string>
    <string name="review_subordinates_title">Подчинённые, которых нужно оценить</string>
    <string name="grade_questions_title">Ответьте на вопросы…</string>
    <string name="save_grade_questions_button">Сохранить</string>
    <string name="cant_grade_peer_button">Не могу ответить на большую часть вопросов</string>
    <string name="results_title">Результаты performance-review</string>
    <string name="watch_my_results_text">Посмотреть свои резульаты</string>
    <string name="my_subordinates_results_text">Результаты моих подчинённых:</string>
    <string name="no_subordinates_text">У вас нет подчинённых</string>
    <string name="upload_user_image_text">Пожалуйста, загрузите фото</string>
    <string name="self_review_inactive_title">Вы уже сдали селф-ревью :(</string>
    <string name="results_inactive_title">Пока Performance Review продолжается, результаты недоступны!</string>
</resources>