<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/navigation_self_review"
        android:title="@string/self_review"
        android:icon="@drawable/ic_menu_self_review"
        android:orderInCategory="1" />
    <item
        android:id="@id/navigation_verify_peers"
        android:title="@string/subordinates_menu_item_title"
        android:icon="@drawable/ic_menu_self_review"
        android:orderInCategory="2" />
    <item
        android:id="@+id/navigation_peers_review"
        android:title="@string/peers_review_menu_item_title"
        android:icon="@drawable/ic_menu_self_review"
        android:orderInCategory="3" />
    <item
        android:id="@+id/navigation_results"
        android:title="@string/results_menu_item_title"
        android:icon="@drawable/ic_menu_self_review"
        android:orderInCategory="4" />
</menu>