<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_login_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:helperText="@string/required_input_text"
        app:helperTextTextColor="?colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/login_hint"
            android:id="@+id/edit_login"
            android:lines="1"
            android:autofillHints="login"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_layout"
        android:layout_marginTop="?verticalSpacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="?colorSecondary"
        app:passwordToggleEnabled="true"
        app:helperText="@string/required_input_text"
        app:helperTextTextColor="?colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/edit_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:maxLength="16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_phone_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:helperText="@string/required_input_text"
        app:helperTextTextColor="?colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone"
            android:hint="@string/phone_hint"
            android:lines="1"
            android:autofillHints="phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_sbis_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:helperText="@string/required_input_text"
        app:helperTextTextColor="?colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_sbis"
            android:hint="@string/sbis_hint"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/register_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_sbis_layout" />

    <Button
        android:id="@+id/already_registered_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/already_registered_button_text"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>