<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/review_peers_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/review_peers_fragment_title"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/peers_to_review_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/review_peers_title"
        tools:listitem="@layout/item_peer_to_verify"
        />

    <TextView
        android:id="@+id/review_manager_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/review_manager_title"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peers_to_review_recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/review_manager_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/review_manager_title"
        tools:listitem="@layout/item_peer_to_verify"
        />

    <TextView
        android:id="@+id/review_subordinates_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/review_subordinates_title"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_manager_recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/review_subordinates_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/review_subordinates_title"
        tools:listitem="@layout/item_peer_to_verify"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>